# satint

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  rustfmt.toml
.github/workflows/: ci.yml
src/: common.rs  convert.rs  lib.rs  ops.rs  primitives.rs  rand.rs  serde.rs  si.rs  su.rs
tests/: operator_matrix.rs  rand.rs  serde.rs
