[package]
name = "satint"
version = "0.1.3"
edition = "2024"
rust-version = "1.85.1"
description = "Saturating integer scalar wrappers for no_std Rust"
documentation = "https://docs.rs/satint"
readme = "README.md"
repository = "https://github.com/Jmgr/satint"
license = "MIT OR Apache-2.0"
keywords = ["saturating", "integer", "arithmetic", "scalar", "no-std"]
categories = ["no-std", "no-std::no-alloc", "mathematics"]
exclude = [".github/**", ".gitignore"]
resolver = "2"

[features]
default = []
serde = ["dep:serde"]

[dependencies]
serde = { version = "1.0", default-features = false, optional = true }

[dev-dependencies]
rstest = "0.26.1"
serde_test = "1.0"

[lints.clippy]
all = { level = "deny", priority = -3 }
pedantic = { level = "deny", priority = -2 }
restriction = { level = "deny", priority = -1 }
absolute_paths = "allow"
arbitrary_source_item_ordering = "allow"
arithmetic_side_effects = "allow"
as_conversions = "allow"
assertions_on_result_states = "allow"
blanket_clippy_restriction_lints = "allow"
cast_lossless = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
field_scoped_visibility_modifiers = "allow"
float_arithmetic = "allow"
float_cmp = "allow"
modulo_arithmetic = "allow"
default_numeric_fallback = "allow"
implicit_return = "allow"
min_ident_chars = "allow"
missing_docs_in_private_items = "allow"
missing_trait_methods = "allow"
pub_use = "allow"
pub_with_shorthand = "allow"
separated_literal_suffix = "allow"
single_char_lifetime_names = "allow"
std_instead_of_core = "allow"
tests_outside_test_module = "allow"
unused_trait_names = "allow"
